improved some bits

--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -23,7 +23,6 @@
 \newglossaryentry{HTTP}{name=HTTP,description={Hypertext Transfer Protocol}}
 \newglossaryentry{IBM}{name=IBM,description={International Business Machine}}
 \newglossaryentry{IDL}{name=IDL,description={Interface Description Language}}
-\newglossaryentry{IS}{name=IS,description={Informačn\'{\i} systém}}
 \newglossaryentry{Java EE}{name=Java EE,description={Java Platform, Enterprise Edition}}
 \newglossaryentry{JSR}{name=JSR,description={Java Specification Request}}
 \newglossaryentry{JPQL}{name=JPQL,description={Java Persistence Query Language}}
@@ -34,6 +33,7 @@
 \newglossaryentry{MDA}{name=MDA,description={Model-Driver Architecture}}
 \newglossaryentry{MQ}{name=MQ,description={Message Queue}}
 \newglossaryentry{NAT}{name=NAT,description={Native Address Translation}}
+\newglossaryentry{OCL}{name=OCL,description={Object Constraint Language}}
 \newglossaryentry{OMG}{name=OMG,description={Object Modeling Group}}
 \newglossaryentry{ORB}{name=ORB,description={Object Request Broker}}
 \newglossaryentry{OOP}{name=OOP,description={Object Oriented Programming}}
