--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -379,7 +379,7 @@ počtu uzlů grafu. V př\'{\i}padě, že zápis nového či upraveného kontext
 nebo sémantické chyby, administrace nedovol\'{\i} uživateli změnu provést a vyp\'{\i}še informativn\'{\i}
 chybovou hlášku.
 
-\section{Závěr}
+\section{Shrnutí}
 
 %\goal{Dosáhli jsme vytyčen\'ych c\'{\i}lů implementace}
 Na základě navrženého frameworku byly implementovány prototypy
