--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -43,7 +43,7 @@ byznysových pravidel v uživatelském rozhraní~\cite{cemus2017separation}. Pro
 naším frameworkem by znamenalo pouze implementovat adaptér, který by převáděl námi
 použitou reprezentaci byznysového pravidla do podoby, kterou je schopen využívat
 aspect weaver v \gls{UI}. Tím by se rozšířila působnost našeho frameworku a zároveň
-by se zvýšil uživatelský komfort \gls{IS}, který framework využívá, díky real-time
+by se zvýšil uživatelský komfort \gls{EIS}, který framework využívá, díky real-time
 validaci vstupních hodnot formulářů.
 
 \subsection{Integrace frameworku s datovou vrstvou}
