--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -55,6 +55,10 @@ unicode=true,
 \usepackage{tabularx}
 \usepackage{array}
 \usepackage{afterpage}
+\usepackage{amsthm}
+
+\theoremstyle{definition}
+\newtheorem*{definition}{Definice}
 
 \usepackage[style=long,acronym,nomain,numberedsection,nogroupskip]{glossaries}
 \makeglossaries
@@ -115,7 +119,12 @@ unicode=true,
 
 \acknowledgements
 \noindent
-Zde můžete napsat své poděkování, pokud chcete a máte komu děkovat.
+Chtěl bych poděkovat Ing. Karlovi Čemusovi za jeho trpělivost, podporu a
+cenné rady nejen při vedení této práce, ale po celou dobu mého studia.
+Děkuji své rodině, přítelkyni a přátelům za zázemí a podporu, kterou
+mi po dobu studia poskytovali a bez které bych ho nemohl dokončit.
+Děkuji také svým kolegům, kteří mě motivovali k dosahování vynikajících
+výsledků v průběhu magisterského studia.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
