--- a/reference.bib
+++ b/reference.bib
@@ -737,9 +737,68 @@
 }
 
 @book{hopcroft1983data,
-    title={Data structures and algorithms},
-    author={Hopcroft, John E and Ullman, Jeffrey D},
-    year={1983},
+    title = {Data structures and algorithms},
+    author = {Hopcroft, John E and Ullman, Jeffrey D},
+    year = {1983},
     publisher = {Addison-Wesley Longman Publishing},
     address = {Boston, MA, USA},
+}
+
+@inproceedings{cerny2011reduce,
+    title = {How to reduce costs of business logic maintenance},
+    author = {Cerny, Tomas and Donahoo, Michael J},
+    booktitle = {Computer Science and Automation Engineering (CSAE), 2011 IEEE International Conference on},
+    volume = {1},
+    pages = {77--82},
+    year = {2011},
+    organization = {IEEE}
+}
+
+@inproceedings{sobel1996introduction,
+    title = {An introduction to reflection-oriented programming},
+    author = {Sobel, Jonathan M and Friedman, Daniel P},
+    booktitle = {Proceedings of reflection},
+    volume = {96},
+    year = {1996}
+}
+
+@book{dumas2005process,
+    title = {Process-aware information systems: bridging people and software through process technology},
+    author = {Dumas, Marlon and Van der Aalst, Wil M and Ter Hofstede, Arthur H},
+    year = {2005},
+    publisher = {John Wiley \& Sons},
+    address = {Hoboken, New Jersey, USA},
+}
+
+@inproceedings{nemuraite2008representation,
+    title = {Representation of business rules in UML\&OCL models for developing information systems},
+    author = {Nemuraite, Lina and Ceponiene, Lina and Vedrickas, Gediminas},
+    booktitle = {IFIP Working Conference on The Practice of Enterprise Modeling},
+    pages = {182--196},
+    year = {2008},
+    organization = {Springer}
+}
+
+@book{morgan2002business,
+    title = {Business rules and information systems: aligning IT with business goals},
+    author = {Morgan, Tony},
+    year = {2002},
+    publisher = {Addison-Wesley Professional},
+    address = {Boston, Massachusetts, USA},
+}
+
+@book{fowler2010domain,
+    title = {Domain-specific languages},
+    author = {Fowler, Martin},
+    year = {2010},
+    publisher = {Pearson Education},
+    address = {London, England, UK},
+}
+
+@article{warmer1998object,
+    title = {The object constraint language: Precise modeling with uml (addison-wesley object technology series)},
+    author = {Warmer, Jos B and Kleppe, Anneke G},
+    year = {1998},
+    publisher = {$Addison-Wesley Professional},
+    address = {Boston, Massachusetts, USA},
 }
