--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -9,7 +9,7 @@ Do styku s nimi přicházíme jak při výkonu našich povolání, tak ve volné
 kde mimo jiné významně usnadňují přístup ke studijním materiálům, přes zdravotnictví,
 kde pomáhají zvyšovat efektivitu a úroveň péče o pacienty~\cite{fichman2011editorial}, až po
 sociální sítě, kde umožňují lidem globálně komunikovat a sdílet své myšlenky, pocity a zážitky.
-Jedním z úkolů výzkumu v oblasti softwarového inženýrství je zjednodušení a zefektivnění proces
+Jedním z úkolů výzkumu v oblasti softwarového inženýrství je zjednodušení a zefektivnění procesu
 vývoje informačních systémů. Díky tomu budou tyto systémy moci splňovat stále rostoucí množství požadavků.
 
 \goal{SOA}
