set toc depth to sections

--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -156,6 +156,7 @@ Očekávají se cca 1 -- 2 odstavce, maximálně půl stránky.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 % obsahy a seznamy
+\setcounter{tocdepth}{1}
 \tableofcontents        % Obsah / Table of Contents
 
 % pokud v práci nejsou obrázky nebo tabulky - odstraňte jejich seznam
