remove goals from intro

--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -2,7 +2,7 @@
 
 \chapter{Úvod}\label{ch:uvod}
 
-\goal{Informační systémy a jejich důležitost}
+%\goal{Informační systémy a jejich důležitost}
 Informační systémy se ve 21. století staly neodmyslitelnou součástí našich každodenních životů.
 Do styku s nimi přicházíme jak při výkonu našich povolání, tak ve volném čase. Usnadňují
 řadu aspektů našich činností. Jejich využití sahá do mnoha sektorů, od vzdělání a vědy,
@@ -12,7 +12,7 @@ sociální sítě, kde umožňují lidem globálně komunikovat a sdílet své m
 Jedním z úkolů výzkumu v oblasti softwarového inženýrství je zjednodušení a zefektivnění procesu
 vývoje informačních systémů. Díky tomu budou tyto systémy moci splňovat stále rostoucí množství požadavků.
 
-\goal{SOA}
+%\goal{SOA}
 Náročnost vývoje některých informačních systémů překračuje možnosti jednotlivců, ale
 i celých týmů či skupin. Tyto systémy často využívají větší počet různorodých technologií kvůli
 širokému spektru funkcionality, kterou nabízejí. Jedním z přístupů, který tyto problémy řeší,
@@ -21,7 +21,7 @@ nezávislých celků, tzv. služeb. Každá služba pak zastřešuje pouze čás
 Tím je umožněno využívat teoreticky neomezené množství technologií a rozdělit práci na systému mezi více nezávislých
 vývojářských týmu.
 
-\goal{Byznysová pravidla}
+%\goal{Byznysová pravidla}
 Tato architektura bohužel nepřináší odpověď na všechny problémy, které je potřeba v informačních
 systémech řešit. Jak je popsáno v následujících kapitolách, jedním z těchto problémů jsou tzv. byznysová
 pravidla. Ta slouží k zajištění správné funkcionality systému a konzistenci uložených dat.
@@ -29,7 +29,7 @@ Některá tato pravidla zasahují do celého systému, tedy i do více služeb.
 To při použití konvenčního přístupu přináší nutnost manuální duplikace zdrojového
 kódu a tím jsou zvýšeny náklady na vývoj systému a riziko lidské chyby.
 
-\goal{Motivace a cíle}
+%\goal{Motivace a cíle}
 Cílem této práce je prozkoumat myšlenku inovativního přístupu k centrální správě a automatické
 distribuci byznysových pravidel v systémech využívajících architekturu orientovanou na služby
 a navrhnout framework, který by umožnil tento přístup uplatnit v praxi.
@@ -37,7 +37,7 @@ Tento koncept by měl díky využití aspektově orientovaného programování u
 a doménových expertů. Díky tomu by mohl přinést snížení nákladů na vývoj a údržbu informačních systémů
 a tím zvýšit jejich kvalitu a snížit náklady na jejich vývoj.
 
-\goal{Popis struktury DP a obsah kapitol}
+%\goal{Popis struktury DP a obsah kapitol}
 Kapitola~\ref{ch:analyza} se věnuje detailn\'{\i} anal\'yze problematiky bynysov\'ych pravidel a
 architektury orientované na služby, včetně jej\'{\i}ho historického v\'yvoje až po nejnovějš\'{\i} trendy,
 a v závěru identifikuje požadavky kladené na framework pro centráln\'{\i} správu a
