little more info aboutch chatper 3 in intro

--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -44,7 +44,8 @@ a v závěru identifikuje požadavky kladené na framework pro centráln\'{\i} s
 automatickou distribuci byznysov\'ych pravidel v této architektuře. Kapitola~\ref{ch:reserse}
 se zab\'yvá rešerš\'{\i} stávaj\'{\i}c\'{\i}ch pr\'{\i}stupu k v\'yvoji informacn\'{\i}ch systému a speciálně se zaměřuje
 na koncepty aspektově orientovaného programován\'{\i} a modern\'{\i}ho aspekty ř\'{\i}zeného př\'{\i}stupu k návrhu
-systémů. Dále se kapitola věnuje průzkumu existuj\'{\i}c\'{\i}ch nástrojů pro správu byznysov\'ych pravidel.
+systémů. Dále se kapitola věnuje průzkumu existuj\'{\i}c\'{\i}ch nástrojů pro správu byznysov\'ych pravidel a existujícím
+síťovým architekturám, které budou sloužit pro automatickou distribuci byznysových pravidel mezi službami.
 Kapitola~\ref{ch:navrh} formalizuje prostřed\'{\i} architektury orientované na služby do terminologie
 aspektově orientovaného programován\'{\i} a na základě této formalizace navrhuje koncept frameworku,
 kter\'y realizuje centráln\'{\i} správu a automatickou distribuci byznysov\'ych pravidel.
